checked view